--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul id="menu">
   
   <li><strong>Home</strong>
- <li><a href="ProFinal/Deportes.html"> Deportes</a>
+ <li hidden><a href="ProFinal/Deportes.html"> Deportes</a>
  <ul>
  <li><a href="ProFinal/baloncesto.html">Baloncesto</a></li>
  <li><a href="ProFinal/volleyball.html">Volleyball</a></li>
