--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  </ul></li>
  <li><a href="ContactUs.html"> Contact US</a>
  <li><a href="ProFinal/LogIn.html"> LogIn</a>
+ <li><a href="ProFinal/Singup.html"> Singup</a>
  </ul>
  </nav>
  <main>
