--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
  <li><a href="ContactUs.html"> Contact US</a>
  <li><a href="ProFinal/LogIn.html"> LogIn</a>
  <li><a href="ProFinal/Singup.html"> Singup</a>
+ <li><a href="ProFinal/Profile.html"> Profile</a>
  </ul>
  </nav>
  <main>
